--- a/app/vaxning.html
+++ b/app/vaxning.html
@@ -6,7 +6,7 @@
         <title>Brasiliansk vaxning Stockholm - Göteborg | Salong Underbart</title>
         <meta name="description" content="Välkomna till Salong Underbart. Vi erbjuder brasiliansk vaxning i Stockholm och Göteborg. Vi jobbar exklusivt med vaxning, det här är vår vardag. Välkomna!">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="css/main.css">
+        <link rel="stylesheet" href="css/main.css" inline>
         <link rel="canonical" href="http://salongunderbart.se/vaxning" />
         <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
         <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
@@ -232,7 +232,7 @@
         	</div>
         </div>
 
-        <script async src="js/main.js"></script>
+        <script async src="js/main.js" inline></script>
 
         <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
         <script>
