--- a/app/stockholm.html
+++ b/app/stockholm.html
@@ -6,13 +6,14 @@
         <title>Stockholm | Salong Underbart</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="css/main.css">
+        <link rel="stylesheet" href="css/main.css" inline>
         <link rel="canonical" href="http://salongunderbart.se/stockholm" />
         <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
         <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
         <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
         <meta property='og:locale' content='sv_se'/>
         <meta property='og:title' content='Stockholm | Salong Underbart'/>
+        <meta property='og:description' content='Välkomna till Salong Underbart. Vi erbjuder brasiliansk vaxning i Stockholm och Göteborg. Vi jobbar exklusivt med vaxning, det här är vår vardag. Välkomna!'/>
         <meta property='og:url' content='http://salongunderbart.se/stockholm'/>
         <meta property='og:site_name' content='Salong Underbart'/>
         <meta property='og:type' content='article'/>
@@ -144,7 +145,7 @@
         	</div>
         </div>
 
-        <script async src="js/main.js"></script>
+        <script async src="js/main.js" inline></script>
 
         <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
         <script>
