--- a/app/index.html
+++ b/app/index.html
@@ -8,14 +8,14 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <!-- <link rel="preload" as="style" href="css/main.css" onload="this.rel='stylesheet'"> -->
         <link rel="stylesheet" href="css/main.css" inline>
-        <link rel="canonical" href="http://salongunderbart.se/" />
+        <link rel="canonical" href="http://salongunderbart.se" />
         <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
         <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
         <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
         <meta property='og:locale' content='sv_se'/>
         <meta property='og:title' content='Brasiliansk vaxning i Stockholm &amp; Göteborg | Salong Underbart'/>
         <meta property='og:description' content='&quot;Sveriges enda vaxstudio. Vi arbetar enbart med vaxning och är specialiserade på brasiliansk vaxning. Välkommen till våra salonger i Stockholm och Göteborg!&quot;'/>
-        <meta property='og:url' content='http://salongunderbart.se/'/>
+        <meta property='og:url' content='http://salongunderbart.se'/>
         <meta property='og:site_name' content='Salong Underbart'/>
         <meta property='og:type' content='article'/>
     </head>
@@ -102,7 +102,7 @@
                         </div>
                     </div>
                     <div>
-        			    <p>Copyright 2016 Underbart Academy AB, alla rättigheter reserverade. Design av <a href="http://www.waldenvega.se/">Walden &amp; Vega</a>.</p>
+        			    <p>Copyright 2017 Underbart Academy AB, alla rättigheter reserverade. Design av <a href="http://www.waldenvega.se/">Walden &amp; Vega</a>.</p>
                     </div>
         		</footer>
         	</div>
