removed quotes around desc

--- a/app/index.html
+++ b/app/index.html
@@ -4,9 +4,8 @@
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
         <title>Brasiliansk vaxning i Stockholm &amp; Göteborg | Salong Underbart</title>
-        <meta name="description" content="&quot;Sveriges enda vaxstudio. Vi arbetar enbart med vaxning och är specialiserade på brasiliansk vaxning. Välkommen till våra salonger i Stockholm och Göteborg!&quot;"/>
+        <meta name="description" content="Sveriges enda vaxstudio. Vi arbetar enbart med vaxning och är specialiserade på brasiliansk vaxning. Välkommen till våra salonger i Stockholm och Göteborg!"/>
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <!-- <link rel="preload" as="style" href="css/main.css" onload="this.rel='stylesheet'"> -->
         <link rel="stylesheet" href="css/main.css" inline>
         <link rel="canonical" href="http://salongunderbart.se" />
         <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
@@ -14,7 +13,7 @@
         <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
         <meta property='og:locale' content='sv_se'/>
         <meta property='og:title' content='Brasiliansk vaxning i Stockholm &amp; Göteborg | Salong Underbart'/>
-        <meta property='og:description' content='&quot;Sveriges enda vaxstudio. Vi arbetar enbart med vaxning och är specialiserade på brasiliansk vaxning. Välkommen till våra salonger i Stockholm och Göteborg!&quot;'/>
+        <meta property='og:description' content="Sveriges enda vaxstudio. Vi arbetar enbart med vaxning och är specialiserade på brasiliansk vaxning. Välkommen till våra salonger i Stockholm och Göteborg!"/>
         <meta property='og:url' content='http://salongunderbart.se'/>
         <meta property='og:site_name' content='Salong Underbart'/>
         <meta property='og:type' content='article'/>
