--- a/app/om-oss.html
+++ b/app/om-oss.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
         <title>Om oss | Salong Underbart</title>
-        <meta name="description" content="">
+        <meta name="description" content="Vi erbjuder brasiliansk vaxning i Stockholm och Göteborg. Vi jobbar exklusivt med vaxning, det här är vår vardag. Välkomna!">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="css/main.css" inline>
         <link rel="canonical" href="http://salongunderbart.se/om-oss" />
@@ -13,7 +13,7 @@
         <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
         <meta property='og:locale' content='sv_se'/>
         <meta property='og:title' content='Om oss | Salong Underbart'/>
-        <meta property='og:description' content='Välkomna till Salong Underbart. Vi erbjuder brasiliansk vaxning i Stockholm och Göteborg. Vi jobbar exklusivt med vaxning, det här är vår vardag. Välkomna!'/>
+        <meta property='og:description' content='Vi erbjuder brasiliansk vaxning i Stockholm och Göteborg. Vi jobbar exklusivt med vaxning, det här är vår vardag. Välkomna!'/>
         <meta property='og:url' content='http://salongunderbart.se/om-oss'/>
         <meta property='og:site_name' content='Salong Underbart'/>
         <meta property='og:type' content='article'/>
