--- a/app/stockholm.html
+++ b/app/stockholm.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
         <title>Stockholm | Salong Underbart</title>
-        <meta name="description" content="">
+        <meta name="description" content="Salong Underbart i Stockholm hittar du på Lilla Nygatan 20. Välkomna!">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="css/main.css" inline>
         <link rel="canonical" href="http://salongunderbart.se/stockholm" />
