--- a/app/vaxning.html
+++ b/app/vaxning.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
         <title>Brasiliansk vaxning Stockholm - Göteborg | Salong Underbart</title>
-        <meta name="description" content="Välkomna till Salong Underbart. Vi erbjuder brasiliansk vaxning i Stockholm och Göteborg. Vi jobbar exklusivt med vaxning, det här är vår vardag. Välkomna!">
+        <meta name="description" content="Vi erbjuder brasiliansk vaxning i Stockholm och Göteborg. Vi jobbar exklusivt med vaxning, det här är vår vardag. Välkomna!">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="css/main.css" inline>
         <link rel="canonical" href="http://salongunderbart.se/vaxning" />
@@ -13,7 +13,7 @@
         <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
         <meta property='og:locale' content='sv_se'/>
         <meta property='og:title' content='Brasiliansk vaxning Stockholm - Göteborg | Salong Underbart'/>
-        <meta property='og:description' content='Välkomna till Salong Underbart. Vi erbjuder brasiliansk vaxning i Stockholm och Göteborg. Vi jobbar exklusivt med vaxning, det här är vår vardag. Välkomna!'/>
+        <meta property='og:description' content='Vi erbjuder brasiliansk vaxning i Stockholm och Göteborg. Vi jobbar exklusivt med vaxning, det här är vår vardag. Välkomna!'/>
         <meta property='og:url' content='http://salongunderbart.se/vaxning'/>
         <meta property='og:site_name' content='Salong Underbart'/>
         <meta property='og:type' content='article'/>
@@ -233,15 +233,5 @@
         </div>
 
         <script async src="js/main.js" inline></script>
-
-        <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
-        <script>
-            (function(b,o,i,l,e,r){b.GoogleAnalyticsObject=l;b[l]||(b[l]=
-            function(){(b[l].q=b[l].q||[]).push(arguments)});b[l].l=+new Date;
-            e=o.createElement(i);r=o.getElementsByTagName(i)[0];
-            e.src='//www.google-analytics.com/analytics.js';
-            r.parentNode.insertBefore(e,r)}(window,document,'script','ga'));
-            ga('create','UA-XXXXX-X','auto');ga('send','pageview');
-        </script>
     </body>
 </html>
