--- a/app/goteborg.html
+++ b/app/goteborg.html
@@ -6,15 +6,15 @@
         <title>Göteborg | Salong Underbart</title>
         <meta name="description" content="Salong Underbart i Göteborg hittar du på Aschebergsgatan 17. Välkomna!">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="css/main.css" inline>
-        <link rel="canonical" href="http://salongunderbart.se/goteborg" />
+        <link rel="stylesheet" href="css/main.css">
+        <link rel="canonical" href="https://salongunderbart.se/goteborg" />
         <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
         <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
         <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
         <meta property='og:locale' content='sv_se'/>
         <meta property='og:title' content='Göteborg | Salong Underbart'/>
         <meta property='og:description' content='Salong Underbart i Göteborg hittar du på Aschebergsgatan 17. Välkomna!'/>
-        <meta property='og:url' content='http://salongunderbart.se/goteborg'/>
+        <meta property='og:url' content='https://salongunderbart.se/goteborg'/>
         <meta property='og:site_name' content='Salong Underbart'/>
         <meta property='og:type' content='article'/>
     </head>
