--- a/app/vaxning.html
+++ b/app/vaxning.html
@@ -6,15 +6,15 @@
         <title>Brasiliansk vaxning Stockholm - Göteborg | Salong Underbart</title>
         <meta name="description" content="Vi erbjuder brasiliansk vaxning i Stockholm och Göteborg. Vi jobbar exklusivt med vaxning, det här är vår vardag. Välkomna!">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="css/main.css" inline>
-        <link rel="canonical" href="http://salongunderbart.se/vaxning" />
+        <link rel="stylesheet" href="css/main.css">
+        <link rel="canonical" href="https://salongunderbart.se/vaxning" />
         <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
         <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
         <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
         <meta property='og:locale' content='sv_se'/>
         <meta property='og:title' content='Brasiliansk vaxning Stockholm - Göteborg | Salong Underbart'/>
         <meta property='og:description' content='Vi erbjuder brasiliansk vaxning i Stockholm och Göteborg. Vi jobbar exklusivt med vaxning, det här är vår vardag. Välkomna!'/>
-        <meta property='og:url' content='http://salongunderbart.se/vaxning'/>
+        <meta property='og:url' content='https://salongunderbart.se/vaxning'/>
         <meta property='og:site_name' content='Salong Underbart'/>
         <meta property='og:type' content='article'/>
     </head>
