seo and mobile adjusting

--- a/app/om-oss.html
+++ b/app/om-oss.html
@@ -60,11 +60,11 @@
     		<div class="wrapper">
     			<nav id="main-nav" role="navigation">
     				<ul id="menu-underbart-navigation" class="menu">
-                        <li><a href="goteborg">Göteborg</a></li>
-                        <li><a href="stockholm">Stockholm</a></li>
-                        <li><a href="vaxning">Vaxning</a></li>
-                        <li><a href="laser">Laser</a></li>
-                        <li class="active"><a href="om-oss">Om oss</a></li>
+                        <li><a href="/stockholm" title="Brasiliansk vaxning i Stockholm">Stockholm</a></li>
+                        <li><a href="/goteborg" title="Brasiliansk vaxning i Göteborg">Göteborg</a></li>
+                        <li><a href="/vaxning" title="Om brasiliansk vaxning">Vaxning</a></li>
+                        <li><a href="/laser" title="Om laser behandling">Laser</a></li>
+                        <li class="active"><a href="/om-oss" title="Om Salong Underbart">Om oss</a></li>
                     </ul>
                 </nav>
 
@@ -93,11 +93,11 @@
                             </div>
 
                             <div class="pins row col-640">
+                                <a href="/stockholm">
+                                    <img class="pin" src="img/pin-sthlm.png" height="238" width="195">
+                                </a>
             					<a href="/goteborg">
             						<img class="pin" src="img/pin-gbg.png" height="238" width="195">
-            					</a>
-            					<a href="/stockholm">
-            						<img class="pin" src="img/pin-sthlm.png" height="238" width="195">
             					</a>
             				</div>
                         </div>
@@ -108,16 +108,16 @@
                 <footer id="footer" role="contentinfo">
                     <div class="contact row">
                         <div>
-                            <h4>Underbart Gbg</h4>
-                            <p><a href="https://goo.gl/maps/Y8GzaQ17rax" target="_blank">Aschebergsgatan 17</a></p>
-                            <p>031 - 711 88 01</p>
-                            <p><a href="mailto:gbg@salongunderbart.se" class="mail">gbg@salongunderbart.se</a></p>
-                        </div>
-                        <div>
                             <h4>Underbart Sthlm</h4>
                             <p><a href="https://goo.gl/maps/wbj8GN51KMU2" target="_blank">Lilla Nygatan 20</a></p>
                             <p>08 - 21 63 60</p>
                             <p><a href="mailto:sthlm@salongunderbart.se" class="mail">sthlm@salongunderbart.se</a></p>
+                        </div>
+                        <div>
+                            <h4>Underbart Gbg</h4>
+                            <p><a href="https://goo.gl/maps/Y8GzaQ17rax" target="_blank">Aschebergsgatan 17</a></p>
+                            <p>031 - 711 88 01</p>
+                            <p><a href="mailto:gbg@salongunderbart.se" class="mail">gbg@salongunderbart.se</a></p>
                         </div>
                     </div>
                     <div>
