--- a/app/laser.html
+++ b/app/laser.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-        <title>Permanent hårborttagning Stockholm - Göteborg | Salong Underbart</title>
+        <title>Permanent hårborttagning Stockholm & Göteborg - Salong Underbart</title>
         <meta name="description" content="Vi använder oss av Light Sheer Diodlaser, den mest avancerade, effektiva och vetenskapligt beprövade lasern på marknaden.">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="css/main.css">
@@ -12,7 +12,7 @@
         <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
         <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
         <meta property='og:locale' content='sv_se'/>
-        <meta property='og:title' content='Permanent hårborttagning Stockholm - Göteborg | Salong Underbart'/>
+        <meta property='og:title' content='Permanent hårborttagning Stockholm & Göteborg - Salong Underbart'/>
         <meta property='og:description' content='Vi använder oss av Light Sheer Diodlaser, den mest avancerade, effektiva och vetenskapligt beprövade lasern på marknaden.'/>
         <meta property='og:url' content='https://salongunderbart.se/laser'/>
         <meta property='og:site_name' content='Salong Underbart'/>
@@ -60,18 +60,18 @@
     		<div class="wrapper">
     			<nav id="main-nav" role="navigation">
     				<ul id="menu-underbart-navigation" class="menu">
-                        <li><a href="goteborg">Göteborg</a></li>
-                        <li><a href="stockholm">Stockholm</a></li>
-                        <li><a href="vaxning">Vaxning</a></li>
-                        <li class="active"><a href="laser">Laser</a></li>
-                        <li><a href="om-oss">Om oss</a></li>
+                        <li><a href="/stockholm" title="Brasiliansk vaxning i Stockholm">Stockholm</a></li>
+                        <li><a href="/goteborg" title="Brasiliansk vaxning i Göteborg">Göteborg</a></li>
+                        <li><a href="/vaxning" title="Om brasiliansk vaxning">Vaxning</a></li>
+                        <li class="active"><a href="/laser" title="Om laser behandling">Laser</a></li>
+                        <li><a href="/om-oss" title="Om Salong Underbart">Om oss</a></li>
                     </ul>
                 </nav>
 
     		    <div id="main" role="main">
 
                     <div class="black-box">
-                        <h1>Permanent hårborttagning</h1>
+                        <h2>Permanent hårborttagning</h2>
                     </div>
 
                     <div class="row col-640">
@@ -210,16 +210,16 @@
                 <footer id="footer" role="contentinfo">
                     <div class="contact row">
                         <div>
-                            <h4>Underbart Gbg</h4>
-                            <p><a href="https://goo.gl/maps/Y8GzaQ17rax" target="_blank">Aschebergsgatan 17</a></p>
-                            <p>031 - 711 88 01</p>
-                            <p><a href="mailto:gbg@salongunderbart.se" class="mail">gbg@salongunderbart.se</a></p>
-                        </div>
-                        <div>
                             <h4>Underbart Sthlm</h4>
                             <p><a href="https://goo.gl/maps/wbj8GN51KMU2" target="_blank">Lilla Nygatan 20</a></p>
                             <p>08 - 21 63 60</p>
                             <p><a href="mailto:sthlm@salongunderbart.se" class="mail">sthlm@salongunderbart.se</a></p>
+                        </div>
+                        <div>
+                            <h4>Underbart Gbg</h4>
+                            <p><a href="https://goo.gl/maps/Y8GzaQ17rax" target="_blank">Aschebergsgatan 17</a></p>
+                            <p>031 - 711 88 01</p>
+                            <p><a href="mailto:gbg@salongunderbart.se" class="mail">gbg@salongunderbart.se</a></p>
                         </div>
                     </div>
                     <div>
